[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/visual/exit_button.png" type="Texture" id=1]
[ext_resource path="res://assets/visual/exit_button_white.png" type="Texture" id=2]
[ext_resource path="res://game/apps/patent/PatentApp.gd" type="Script" id=3]
[ext_resource path="res://assets/visual/fonts/Magero.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/visual/patent_inapp.png" type="Texture" id=5]
[ext_resource path="res://assets/visual/fonts/description.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/visual/patents/patent03_tsb.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="PatentApp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -133.736, -68.6858 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="."]
margin_left = 5.65686
margin_top = 4.24265
margin_right = 21.6569
margin_bottom = 20.2426
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatentList" type="ItemList" parent="."]
margin_left = 9.0
margin_top = 48.0
margin_right = 109.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatentID" type="Label" parent="."]
margin_left = 111.844
margin_top = 3.88107
margin_right = 240.844
margin_bottom = 18.8811
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.89, 0.6764, 0.089, 1 )
custom_colors/font_color_shadow = Color( 0.63, 0.21462, 0.0504, 1 )
text = "#512.1/c9"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatentName" type="Label" parent="."]
margin_left = 113.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.905882, 0.905882, 0.905882, 1 )
custom_colors/font_color_shadow = Color( 0.454902, 0.454902, 0.454902, 1 )
text = "Triangle Serial Bus"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppIcon" type="TextureRect" parent="."]
margin_left = 118.357
margin_top = 101.735
margin_right = 170.357
margin_bottom = 153.735
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionBackground" type="ColorRect" parent="."]
margin_left = 181.0
margin_top = 34.0
margin_right = 317.0
margin_bottom = 158.0
color = Color( 0.180392, 0.0901961, 0.0901961, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatentDescription" type="RichTextLabel" parent="."]
margin_left = 184.0
margin_top = 37.0
margin_right = 315.0
margin_bottom = 155.0
custom_fonts/normal_font = ExtResource( 6 )
text = "Next generation serial bus connector triangle shaped needs at least three attempts to plug it in right.
1. connector
2. blue cable indicating speed
3. isolator to keep the speed inside"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraftBackground" type="ColorRect" parent="."]
margin_left = 111.0
margin_top = 34.1675
margin_right = 178.0
margin_bottom = 99.1675
color = Color( 0.180392, 0.0901961, 0.0901961, 0.752941 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PatentDraft" type="TextureRect" parent="DraftBackground"]
margin_left = 1.30308
margin_top = 0.265045
margin_right = 65.3031
margin_bottom = 64.265
texture = ExtResource( 7 )
expand = true

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
